--- a/src/components/css/leaderBoard.css
+++ b/src/components/css/leaderBoard.css
@@ -6,10 +6,22 @@
   justify-content: center;
 }
 
+:root{
+  --main-color: black;
+  --second-color: white;
+}
+
+.active-dark{
+  background-color: #27292D;
+  --main-color: white;
+  --second-color: #27292D;
+}
+
 .heading{
   font-weight: 100;
   margin: 60px 0px;
   text-align: center;
+  color: var(--main-color);
   /* color: #fff; */
 }
 
@@ -39,14 +51,15 @@
   -o-border-radius: 5px 5px 0px 0px;
 }
 .userName{
-  color: black;
+  color: #fff;
   font-size: 18px;
   font-weight: 400;
-  margin: 10px 0 10px 0;
+  margin: 70px 0 0px 0;
   padding: 3px;
   text-align: center;
 }
 
 .userImage img{
   width: 100%;
+  border-radius: 5px 5px 0px 0px;
 }
